--- a/electronic-media.html
+++ b/electronic-media.html
@@ -270,11 +270,7 @@
                 <div class="col-sm-4">
                     <div class="electronic-media-cis-chanal">
                         <div class="electronic-media-video">
-                            <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/AWZwbSm9SbQ?si=5oFiEpkDds4x3dZd"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ac2kQ6Pk400?si=cxgEFHdu4OrSzvWT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                         <div class="electronic-media-text">
                             <p class="cis-npf">CIS A-PAD Bangladesh support Humanitarian act, capacity build up,
@@ -285,8 +281,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4"></div>
+                <div class="col-sm-4 mt-3">
+                    <div class="electronic-media-cis-chanal">
+                        <div class="electronic-media-video">
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/_iSbUWmauIs" title="Community Initiative Society CIS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="electronic-media-text">
+                            <p>Community Initiative Society (CIS) is working on collaborative disaster management.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <div class="electronic-media-cis-chanal">
+                        <div class="electronic-media-video">
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/dp4fo3KZAdI" title="Coronavirus" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="electronic-media-text">
+                            <p>Guidelines for Awareness on Covid-19</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <div class="electronic-media-cis-chanal">
+                        <div class="electronic-media-video">
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/LiWmUH3rAHo" title="Work force at a glance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="electronic-media-text">
+                            <p>Work force at a glance</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
