--- a/electronic-media.html
+++ b/electronic-media.html
@@ -199,7 +199,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="electronic-media-cis-chanal">
+                    <div class="electronic-media-cis-chanal-Society">
                         <div class="electronic-media-video">
                             <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/KLw69lz-6SQ?si=k2rU5H3vkUkwi-MC"
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="electronic-media-cis-chanal">
+                    <div class="electronic-media-cis-chanal-Initiative">
                         <div class="electronic-media-video">
                             <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/8gSZ2xkflPs?si=S85VUiWEgxFbZkNG"
@@ -228,7 +228,8 @@
                 </div>
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
-                    <div class="electronic-media-cis-chanal">
+                    <div class="electronic-media-cis-chanal-emergency-health">
+
                         <div class="electronic-media-video">
                             <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/UOqc12oeyz8?si=p2959eiGog7_Jseq"
@@ -241,14 +242,15 @@
                                 Kurigram regions are living a life of inhumanity in water-logged conditions. The
                                 Community Initiative Society (CIS) has been distributing food items and providing
                                 emergency health care since the beginning of the disaster period. These food
-                                distribution and emergency health care programs will continue until the flood situation
+                                distribution and emergency health care programs will continue until the flood
+                                situation
                                 improves.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="electronic-media-cis-chanal">
+                    <div class="electronic-media-cis-chanal-emergency-health">
                         <div class="electronic-media-video">
                             <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/AWZwbSm9SbQ?si=5oFiEpkDds4x3dZd"
@@ -261,57 +263,83 @@
                                 struggling to
                                 access
                                 shelter, food, primary healthcare, pure water and critical services due to the
-                                devastating flood. In response to the situation, CIS has deployed emergency response and
+                                devastating flood. In response to the situation, CIS has deployed emergency response
+                                and
                                 medical teams to extend immediate support to the affected flood victims of Sylhet.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="electronic-media-cis-chanal">
+                    <div class="electronic-media-cis-chanal-emergency-health">
                         <div class="electronic-media-video">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ac2kQ6Pk400?si=cxgEFHdu4OrSzvWT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/Ac2kQ6Pk400?si=cxgEFHdu4OrSzvWT"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="electronic-media-text">
                             <p class="cis-npf">CIS A-PAD Bangladesh support Humanitarian act, capacity build up,
-                                relief distribution and emergency health facilities that reduce the impact of disaster
-                                upon country and community . The main agenda of CIS is to build up a safer community , a
+                                relief distribution and emergency health facilities that reduce the impact of
+                                disaster
+                                upon country and community . The main agenda of CIS is to build up a safer community
+                                , a
                                 safer society.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mt-3">
-                    <div class="electronic-media-cis-chanal">
+                <div class="col-sm-4 mt-5">
+                    <div class="electronic-media-cis-chanal-cis-health-for">
                         <div class="electronic-media-video">
-                            <iframe width="350" height="197" src="https://www.youtube.com/embed/_iSbUWmauIs" title="Community Initiative Society CIS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/_iSbUWmauIs"
+                                title="Community Initiative Society CIS" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="electronic-media-text">
-                            <p>Community Initiative Society (CIS) is working on collaborative disaster management.</p>
+                            <p>Community Initiative Society (CIS) is working on collaborative disaster management.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mt-3">
-                    <div class="electronic-media-cis-chanal">
+                <div class="col-sm-4 mt-5">
+                    <div class="electronic-media-cis-chanal-cis-health-for">
                         <div class="electronic-media-video">
-                            <iframe width="350" height="197" src="https://www.youtube.com/embed/dp4fo3KZAdI" title="Coronavirus" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/dp4fo3KZAdI"
+                                title="Coronavirus" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="electronic-media-text">
-                            <p>Guidelines for Awareness on Covid-19</p>
+                            <p class="cis-Covid-19">Guidelines for Awareness on Covid-19</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mt-3">
-                    <div class="electronic-media-cis-chanal">
+                <div class="col-sm-4 mt-5">
+                    <div class="electronic-media-cis-chanal-cis-health-for">
                         <div class="electronic-media-video">
-                            <iframe width="350" height="197" src="https://www.youtube.com/embed/LiWmUH3rAHo" title="Work force at a glance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe width="350" height="197" src="https://www.youtube.com/embed/LiWmUH3rAHo"
+                                title="Work force at a glance" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="electronic-media-text">
-                            <p>Work force at a glance</p>
+                            <p class="cis-work-force">Work force at a glance</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="tv-Channel">
+                <div class="tv-channel-header">
+                    <h3>TV Channel</h3>
+                    <div class="tv-channel-header-underline"></div>
+                </div>
+            </div>
+
+
+
         </div>
     </section>
     <!-- electronic-media-section-end  -->
