--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
             <a class="nav-link active bg-dark" data-bs-toggle="tab" href="#all">ALL</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link text-white" style="background-color: red;" data-bs-toggle="tab" href="#events">EVENTS</a>
+            <a class="nav-link " style="background-color: red;" data-bs-toggle="tab" href="#events">EVENTS</a>
           </li>
           <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#emergency"> EMERGENCY</a>
