--- a/print-media.html
+++ b/print-media.html
@@ -214,8 +214,17 @@
                         <img src="./assets/img/print-media/jayjaydin-barhatta-31-may-2023-719x1024.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/banglar-dorpon-barhatta-29-may-2023.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/doinik-notun-bissobatra-pabna-26-may-2023-744x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
