--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./assets/img/hero-img/001.jpg" alt="Los Angeles" class="d-block" style="width: 100%;" />
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Second slide labe Second slide labell</h2>         
+          </div>
+    
         </div>
         <div class="carousel-item">
           <img src="./assets/img/hero-img/IMG20220630111229-1-scaled.jpg" alt="Chicago" class="d-block"
@@ -685,30 +689,30 @@
       </div>
       <div class="container mt-5">
         <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
+        <ul class="nav nav-pills" role="tablist">
           <li class="nav-item mt-2">
-            <a class="nav-link active bg-dark" data-bs-toggle="tab" href="#all">ALL</a>
+            <a class="nav-link active bg-dark " data-bs-toggle="tab" href="#all">ALL</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link " style="background-color: red;" data-bs-toggle="tab" href="#events">EVENTS</a>
+            <a class="nav-link "  data-bs-toggle="pill" href="#events">EVENTS</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#emergency"> EMERGENCY</a>
+            <a class="nav-link"  data-bs-toggle="pill" href="#emergency"> EMERGENCY</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#disaster">DISASTER DRILLING
+            <a class="nav-link"  data-bs-toggle="pill" href="#disaster">DISASTER DRILLING
               PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#training">TRAINING
+            <a class="nav-link"  data-bs-toggle="pill" href="#training">TRAINING
               WORKSHOP</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#awerness">AWERNESS
+            <a class="nav-link"  data-bs-toggle="pill" href="#awerness">AWERNESS
               PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#covid">COVID-19 ACTIVITY</a>
+            <a class="nav-link" data-bs-toggle="pill" href="#covid">COVID-19 ACTIVITY</a>
           </li>
         </ul>
 
