--- a/print-media.html
+++ b/print-media.html
@@ -216,15 +216,53 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/banglar-dorpon-barhatta-29-may-2023.jpg" alt="">
+                        <img src="./assets/img/print-media/04-banglar-dorpon-barhatta-29-may-2023.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/doinik-notun-bissobatra-pabna-26-may-2023-744x1024.jpg"
+                        <img src="./assets/img/print-media/05-doinik-notun-bissobatra-pabna-26-may-2023-744x1024.jpg"
                             alt="">
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/06-Our-Banglaesh-Galachipa-16-april-2023.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/07-daily-observer.jpg"
+                            alt="">
+                    </div>  
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/08-daily-sun.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/09-new-age-554x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/10-amar-shongbad.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/11-the-news-time.jpg"
+                            alt="">
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
